[package]
name = "spacetimedb-dst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["engine-target"]
engine-target = [
    "dep:clap",
    "dep:spacetimedb-commitlog",
    "dep:spacetimedb-datastore",
    "dep:spacetimedb-durability",
    "dep:spacetimedb-engine",
    "dep:spacetimedb-lib",
    "dep:spacetimedb-primitives",
    "dep:spacetimedb-runtime",
    "dep:spacetimedb-sats",
    "dep:spacetimedb-schema",
    "dep:spacetimedb-table",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, optional = true }
spacetimedb-datastore = { path = "../datastore", default-features = false, features = ["simulation"], optional = true }
spacetimedb-commitlog = { workspace = true, optional = true }
spacetimedb-durability = { path = "../durability", default-features = false, features = ["simulation"], optional = true }
spacetimedb-engine = { path = "../engine", default-features = false, features = ["simulation"], optional = true }
spacetimedb-lib = { workspace = true, optional = true }
spacetimedb-primitives = { workspace = true, optional = true }
spacetimedb-runtime = { path = "../runtime/", default-features = false, features = ["simulation"], optional = true }
spacetimedb-sats = { workspace = true, optional = true }
spacetimedb-schema = { workspace = true, optional = true }
spacetimedb-table = { path = "../table", default-features = false, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
