[package]
name = "spacetimedb-dst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
spacetimedb-datastore.workspace = true
spacetimedb-commitlog.workspace = true
spacetimedb-durability.workspace = true
spacetimedb-engine.workspace = true
spacetimedb-lib.workspace = true
spacetimedb-primitives.workspace = true
spacetimedb-runtime = { workspace = true, features = ["simulation"] }
spacetimedb-sats.workspace = true
spacetimedb-schema.workspace = true
spacetimedb-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
