[package]
name = "spacetimedb-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"
description = "The SpacetimeDB query engine"

[dependencies]
anyhow.workspace = true
spacetimedb-expr.workspace = true
spacetimedb-lib.workspace = true
spacetimedb-sats.workspace = true
spacetimedb-physical-plan.workspace = true
spacetimedb-primitives.workspace = true
spacetimedb-sql-parser.workspace = true
spacetimedb-table.workspace = true
