[package]
name = "spacetimedb-expr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"
description = "The logical expression representation for the SpacetimeDB query engine"

[dependencies]
derive_more.workspace = true
string-interner.workspace = true
thiserror.workspace = true
spacetimedb-lib.workspace = true
spacetimedb-primitives.workspace = true
spacetimedb-sats.workspace = true
spacetimedb-schema.workspace = true
spacetimedb-sql-parser.workspace = true

[dev-dependencies]
spacetimedb-lib.workspace = true
