[package]
name = "spacetimedb-fs-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"
description = "Assorted utilities for filesystem operations used in SpacetimeDB"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
zstd.workspace = true
snap.workspace = true
lz4_flex.workspace = true

[dev-dependencies]
tempdir.workspace = true
